--- a/webapp/package.json
+++ b/webapp/package.json
@@ -3,29 +3,40 @@
   "version": "0.0.1",
   "author": "Jonas Zwink und Paula Osterkamp",
   "scripts": {
-    "dev": "npm-run-all build serve",
-    "serve": "cross-env NODE_ENV=dev webpack-dev-server",
-    "build": "npm-run-all build:js resources",
-    "build:js": "webpack --mode=production",
-    "resources": "cp -r index.html public/"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "2.6.10"
+    "core-js": "^3.6.5",
+    "vue": "2.6.11"
   },
   "devDependencies": {
-    "@babel/core": "7.5.0",
-    "@babel/preset-env": "7.5.2",
-    "babel-loader": "8.0.6",
-    "cross-env": "5.2.0",
-    "css-loader": "3.0.0",
-    "node-sass": "4.12.0",
-    "npm-run-all": "4.1.5",
-    "sass-loader": "7.1.0",
-    "vue-loader": "15.7.0",
-    "vue-style-loader": "4.1.2",
-    "vue-template-compiler": "2.6.10",
-    "webpack": "4.35.3",
-    "webpack-cli": "3.3.5",
-    "webpack-dev-server": "3.7.2"
-  }
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "vue-template-compiler": "2.6.11"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
