configure jest to co locate test and component files

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -59,6 +59,9 @@
       "json",
       "vue"
     ],
+    "testMatch": [
+      "**/src/components/**/*.spec.[jt]s?(x)"
+    ],
     "transform": {
       ".*\\.(vue)$": "vue-jest"
     },
