setup eslint rules

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -44,7 +44,16 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {},
+    "rules": {
+      "semi": [
+        "error",
+        "always"
+      ],
+      "quotes": [
+        "error",
+        "double"
+      ]
+    },
     "overrides": [
       {
         "files": [
