--- a/webapp/package.json
+++ b/webapp/package.json
@@ -52,7 +52,8 @@
       ],
       "quotes": [
         "error",
-        "double"
+        "double",
+        "avoid-escape"
       ]
     },
     "overrides": [
