add babel config to package.json

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -85,5 +85,11 @@
       ".*\\.(vue)$": "vue-jest"
     },
     "preset": "@vue/cli-plugin-unit-jest"
+  },
+  "babel": {
+    "presets": [
+      "@vue/cli-plugin-babel/preset",
+      "@babel/preset-env"
+    ]
   }
 }
