--- a/webapp/package.json
+++ b/webapp/package.json
@@ -88,8 +88,7 @@
   },
   "babel": {
     "presets": [
-      "@vue/cli-plugin-babel/preset",
-      "@babel/preset-env"
+      "@vue/cli-plugin-babel/preset"
     ]
   }
 }
