--- a/backend/package.json
+++ b/backend/package.json
@@ -6,17 +6,15 @@
   "scripts": {
     "serve": "node index.js",
     "lint": "eslint --ext .js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.19.0",
+    "apollo-server-testing": "^2.19.0",
     "graphql": "^15.4.0"
-  },
-  "devDependencies": {
-    "eslint": "^7.13.0"
   },
   "eslintConfig": {
     "env": {
@@ -37,5 +35,15 @@
         "avoid-escape"
       ]
     }
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "testMatch": [
+      "**/src/**/**.spec.[jt]s?(x)"
+    ]
+  },
+  "devDependencies": {
+    "eslint": "^7.13.0",
+    "jest": "^26.6.3"
   }
 }
