--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-datasource": "^0.7.2",
     "apollo-server": "^2.19.0",
     "apollo-server-testing": "^2.19.0",
     "graphql": "^15.4.0"
