--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "serve": "node src/index.js",
+    "serve": "nodemon -r esm src/index.js",
     "lint": "eslint --ext .js",
     "test": "jest"
   },
@@ -14,7 +14,7 @@
   "dependencies": {
     "apollo-datasource": "^0.7.2",
     "apollo-server": "^2.19.0",
-    "apollo-server-testing": "^2.19.0",
+    "esm": "^3.2.25",
     "graphql": "^15.4.0"
   },
   "eslintConfig": {
@@ -38,13 +38,28 @@
     }
   },
   "jest": {
-    "testEnvironment": "node",
     "testMatch": [
       "**/src/**/**.spec.[jt]s?(x)"
     ]
   },
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ]
+    ]
+  },
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "apollo-server-testing": "^2.19.0",
     "eslint": "^7.13.0",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.6"
   }
 }
