--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -2,12 +2,10 @@
 .vscode/
 *.code-workspace
 
-webapp/dist/
-
 ### Node ###
-webapp/node_modules/
-webapp/logs
-webapp/npm-debug.log*
+node_modules/
+logs
+npm-debug.log*
 
 ### macOS ###
 .DS_Store
