add apollo-client and call qraphql endpoint from webapp

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -5,14 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
+    "build-storybook": "build-storybook --no-dll",
     "storybook": "start-storybook -p 6006 --no-dll",
-    "build-storybook": "build-storybook --no-dll"
+    "test": "vue-cli-service test:unit"
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "2.6.11"
+    "vue": "2.6.11",
+    "vue-apollo": "^3.0.0-beta.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -30,8 +31,17 @@
     "babel-loader": "^8.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "graphql-tag": "^2.9.0",
+    "jest-transform-graphql": "^2.1.0",
+    "mock-apollo-client": "^1.0.0",
     "react-is": "^17.0.1",
+    "vue-cli-plugin-apollo": "~0.22.2",
     "vue-template-compiler": "2.6.11"
+  },
+  "babel": {
+    "presets": [
+      "@vue/cli-plugin-babel/preset"
+    ]
   },
   "eslintConfig": {
     "root": true,
@@ -82,13 +92,9 @@
       "**/src/components/**/*.spec.[jt]s?(x)"
     ],
     "transform": {
-      ".*\\.(vue)$": "vue-jest"
+      ".*\\.(vue)$": "vue-jest",
+      "\\.(gql|graphql)$": "jest-transform-graphql"
     },
     "preset": "@vue/cli-plugin-unit-jest"
-  },
-  "babel": {
-    "presets": [
-      "@vue/cli-plugin-babel/preset"
-    ]
   }
 }
