--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "apollo-datasource": "^0.7.2",
     "apollo-server": "^2.19.0",
+    "bcrypt": "^5.0.0",
     "esm": "^3.2.25",
     "graphql": "^15.4.0"
   },
