--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -3,11 +3,7 @@ name: CI Backend
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the origin/main branch
-on:
-  push:
-    branches: [ origin/main, exercise-3 ]
-  pull_request:
-    branches: [ origin/main, exercise-3 ]
+on: [push, pull_request]
 
 defaults:
   run:
