--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "serve": "nodemon -r esm src/index.js",
     "lint": "eslint --ext .js",
-    "test": "jest --verbose",
+    "test": "jest --verbose --runInBand",
     "clean": "kill -9 $(lsof -t -i:4000)",
     "db:seed": "node -r esm src/db/seed.js",
     "db:clean": "node -r esm src/db/clean.js"
