--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -20,7 +20,7 @@ jobs:
                 options: --publish=7474:7474
                     --publish=7687:7687
                 env:
-                    NEO4JLABS_PLUGINS: "apoc"
+                    NEO4JLABS_PLUGINS: '["apoc"]'
                     NEO4J_AUTH: none
 
         strategy:
