--- a/backend/package.json
+++ b/backend/package.json
@@ -6,21 +6,27 @@
   "scripts": {
     "serve": "nodemon -r esm src/index.js",
     "lint": "eslint --ext .js",
-    "test": "jest --verbose"
+    "test": "jest --verbose --runInBand --colors",
+    "db:seed": "node -r esm src/db/seed.js",
+    "db:clean": "node -r esm src/db/clean.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/delegate": "^7.0.7",
+    "@graphql-tools/stitch": "^7.1.4",
     "apollo-datasource": "^0.7.2",
     "apollo-server": "^2.19.0",
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
-    "graphql": "^15.4.0",
+    "graphql": "^14.2.1",
     "graphql-middleware": "^4.0.2",
     "graphql-shield": "^7.4.2",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "neo4j-driver": "^4.2.1",
+    "neo4j-graphql-js": "^2.17.1"
   },
   "eslintConfig": {
     "env": {
