--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,47 +1,36 @@
 {
   "name": "hackernews",
-  "version": "0.0.1",
-  "author": "Jonas Zwink und Paula Osterkamp",
+  "version": "1.0.0",
+  "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "build-storybook": "build-storybook --no-dll",
-    "storybook": "start-storybook -p 6006 --no-dll",
-    "test": "vue-cli-service test:unit"
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate",
+    "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint": "npm run lint:js",
+    "storybook": "npx nuxt storybook",
+    "build-storybook": "npx nuxt storybook build",
+    "test": "jest"
   },
   "dependencies": {
+    "@nuxtjs/pwa": "^3.0.2",
     "core-js": "^3.6.5",
-    "vue": "2.6.11",
-    "vue-apollo": "^3.0.0-beta.11"
+    "nuxt": "^2.14.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@storybook/addon-a11y": "^6.0.28",
-    "@storybook/addon-actions": "^6.0.28",
-    "@storybook/addon-essentials": "^6.0.28",
-    "@storybook/addon-links": "^6.0.28",
-    "@storybook/vue": "^6.0.28",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "^4.5.8",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/test-utils": "^1.0.3",
+    "@nuxtjs/eslint-config": "^3.1.0",
+    "@nuxtjs/eslint-module": "^2.0.0",
+    "@nuxtjs/storybook": "^3.3.0",
+    "@vue/test-utils": "^1.1.0",
+    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "graphql-tag": "^2.9.0",
-    "jest-transform-graphql": "^2.1.0",
-    "mock-apollo-client": "^1.0.0",
-    "react-is": "^17.0.1",
-    "vue-cli-plugin-apollo": "~0.22.2",
-    "vue-template-compiler": "2.6.11"
-  },
-  "babel": {
-    "presets": [
-      "@vue/cli-plugin-babel/preset"
-    ]
+    "babel-jest": "^26.5.0",
+    "babel-preset-env": "^1.7.0",
+    "eslint": "^7.10.0",
+    "eslint-plugin-nuxt": "^1.0.0",
+    "jest": "^26.5.0",
+    "vue-jest": "^3.0.4"
   },
   "eslintConfig": {
     "root": true,
@@ -69,7 +58,7 @@
     "overrides": [
       {
         "files": [
-          "**/src/components/**/*.spec.[jt]s?(x)"
+          "**/components/**/*.spec.[jt]s?(x)"
         ],
         "env": {
           "jest": true
@@ -77,24 +66,16 @@
       }
     ]
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ],
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "vue"
-    ],
-    "testMatch": [
-      "**/src/components/**/*.spec.[jt]s?(x)"
-    ],
-    "transform": {
-      ".*\\.(vue)$": "vue-jest",
-      "\\.(gql|graphql)$": "jest-transform-graphql"
-    },
-    "preset": "@vue/cli-plugin-unit-jest"
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ]
+    ]
   }
 }
