--- a/webapp/package.json
+++ b/webapp/package.json
@@ -14,8 +14,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxtjs/apollo": "^4.0.1-rc.5",
     "@nuxtjs/pwa": "^3.0.2",
     "core-js": "^3.6.5",
+    "graphql-tag": "^2.11.0",
     "nuxt": "^2.14.6"
   },
   "devDependencies": {
