--- a/webapp/package.json
+++ b/webapp/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/pwa": "^3.0.2",
     "core-js": "^3.6.5",
     "graphql-tag": "^2.11.0",
+    "jwt-decode": "^3.1.2",
     "nuxt": "^2.14.6"
   },
   "devDependencies": {
