--- a/webapp/package.json
+++ b/webapp/package.json
@@ -33,6 +33,8 @@
     "eslint": "^7.10.0",
     "eslint-plugin-nuxt": "^1.0.0",
     "jest": "^26.5.0",
+    "jest-transform-graphql": "^2.1.0",
+    "mock-apollo-client": "^1.0.0",
     "vue-jest": "^3.0.4"
   },
   "eslintConfig": {
